# rust_axum_askama_webpage

./: Cargo.toml
src/: main.rs
templates/: index.html
