[package]
name = "first_time_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = { version = "0.4.0", features = ["serde-json"] }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
